src/test/invalid/syntaxErr/extensionTests/classes/classDeclarationBeforeFunctions.wacc
# A class needs at least one constructor in its declaration

begin
  class Car() is
    int speed;

    int getSpeed() is
      return speed
    end
  end
  
  int f() is
    return 1
  end

  int x = call f();
  println x
end
